new post 用 travis-ci 自动部署 hexo 静态博客

--- a/source/_posts/2015-03-06-移动组周技术分享.md
+++ b/source/_posts/2015-03-06-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-03-06 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 #### iOS开发 - label自适应高度和宽度 - 张超耀
@@ -31,7 +32,7 @@ tags:
         exit(1);
 
 #### git&git-flow 基本操作 - 曾铭
-- [git](http://git-scm.com/) 是类似 svn 的版本控制系统，[git-flow](http://nvie.com/posts/a-successful-git-branching-model/) 是推荐的 git 工作流； 
+- [git](http://git-scm.com/) 是类似 svn 的版本控制系统，[git-flow](http://nvie.com/posts/a-successful-git-branching-model/) 是推荐的 git 工作流；
 - git 和 svn 的区别：分布 vs 集中，多分支 vs 不用分支，小步提交 vs 大块提交；
 - 用 SourceTree 演示建立 git local repository，stag，commit，用 git-flow 建立 branch，合并等操作
 - 介绍 git remote repository 概念，介绍 pull，push，fetch 等操作
