--- a/source/_posts/2015-03-13-移动组周技术分享.md
+++ b/source/_posts/2015-03-13-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-03-13 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 ## 2015.03.13
@@ -26,8 +27,8 @@ tags:
 	- （原来这样就可以（感谢曾铭的分享））一直很复杂的走几步，今天才发现是弯路
 
 ##### UIButton显示文字和图片
-- UIButton上的图片和文字位置调整： 
-	- 图片位置属性设置：imageEdgeInsets 
+- UIButton上的图片和文字位置调整：
+	- 图片位置属性设置：imageEdgeInsets
 	- 文字位置属性设置：contentEdgeInsets　
 
 
@@ -45,4 +46,3 @@ tags:
 - AirDrop是iOS7 引入的一项新功能，AirDrop可以在不同用户的iOS设备之间进行照片和文档的分享。
 - 苹果在iOS 7 SDK中集成了UIActivityViewController类，可以让你很简单地就能把AirDrop功能整合进app中。
 - 你就能通过AirDrop选项启用activity view。当检测到周围的设备时，activity controller会自动展示在设备上。　
-
