--- a/source/_posts/2015-03-20-移动组周技术分享.md
+++ b/source/_posts/2015-03-20-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-03-20 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 
@@ -16,5 +17,4 @@ tags:
 #### JSON2Model 转换技术分享 - 曾铭
 * NSDictionary 转换至对应对象所面临的问题：代码繁复、安全难以保证（导致 crash）；
 * [YIModel](https://github.com/mithvv/YIModel) 通过 `runtime` 如何设计解决这些问题，并支持 `NSCoding`、`NSCopy`
-* 更好的实现：[JSONModel](https://github.com/icanzilb/JSONModel) 
-
+* 更好的实现：[JSONModel](https://github.com/icanzilb/JSONModel)
