--- a/source/_posts/2015-03-27-移动组周技术分享.md
+++ b/source/_posts/2015-03-27-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-03-27 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 ## 2015.03.27
@@ -9,15 +10,15 @@ tags:
 - [网易云音乐](http://music.163.com/#/download)
 	- 播放界面的毛玻璃效果值得借鉴。
 	- 网易云音乐是一款专注于发现与分享的音乐产品,依托专业音乐人、DJ、好友推荐及社交功能,为用户打造全新的音乐生活。
-	
+
 - [一问](http://yiwen.fm)
  	- 「一问」会坚持每天介绍一家创业公司，包括该创业公司的一开始的想法和思路，想创业的童靴可以参考下。
- 	
+
 - [forest](https://itunes.apple.com/tw/app/forest-bao-chi-zhuan-zhu-ju/id866450515?l=zh&mt=8)
 	- 「Forest」是一个帮助您专心于生活中每个重要时刻的APP。
 	- Forest能帮助您远离智慧型手机的诱惑。每当您想要专注时，种下种籽吧！在接下来的30分钟内，它将成长成为一棵大树。
-	
-- [500px](https://500px.com) 
+
+- [500px](https://500px.com)
 	- 「500px」是一个致力于来自世界各地的摄影师的摄影分享、发现、售卖的专业平台。
 	-  APP的loading不错，小创意值得学习。
 
@@ -58,4 +59,3 @@ tags:
 	- 收费
 
 #### App 分享 - 顾鹏凌
-
