--- a/source/_posts/2015-04-03-移动组周技术分享.md
+++ b/source/_posts/2015-04-03-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-04-03 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 
@@ -19,4 +20,3 @@ tags:
 
 #### storyboard中cell宽度问题 - 张超耀
 - 在Xcode6，iOS8之后，storyboard中，若在width（any）和height（any）情况下自动布局中tableview的cell初始的宽度是600，只有在tableview实例化cell的时候才会自动计算出cell的宽度。在这种情况下，若事先需要cell的宽度（例如，需要根据内容来判断cell高度等），需要结合`-(void)viewWillLayoutSubviews`来做相应的处理。
-
