--- a/source/_posts/2015-04-17-移动组周技术分享.md
+++ b/source/_posts/2015-04-17-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-04-17 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 ## 2015.04.17
 
@@ -41,14 +42,14 @@ tags:
 
 ####[android多国语言适配](http://blog.csdn.net/dyllove98/article/details/8831908) - 吴明
  - android语言信息都是读取strings.xml(项目/res/values/strings.xml)文件指定key的索引值。
- 
- - android语言适配需要在-项目/res下新建不同的语言目录(文件命名规范:values-zh(国家)-rTW(r+区域))如: 
+
+ - android语言适配需要在-项目/res下新建不同的语言目录(文件命名规范:values-zh(国家)-rTW(r+区域))如:
        默认:项目/res/values
        中国台湾:项目/res/values-zh-rTW
        中国简体:项目/resvalues-zh-rCN
 
  - 用户启动APP默认读取跟android系统一样的语言文件，如没有配置各国语言则默认读取系统默认语言文件(项目/res/vlues/strings.xml)
- 
+
  - 正在使用app怎么切换语言？
     <ol>
     <li>sharePreferences存入设置语言：</li>
@@ -58,7 +59,7 @@ tags:
 	</pre>
     <li>语言更新后，对于之前出现且目前仍旧存活的activity，语言设置是不生效的。可以通过重启对应的activity，让语言及时生效。
     </li>
-    
+
       <pre>private void restart() {
               Intent it = new Intent(getActivity(), MainActivity.class); //MainActivity是你想要重启的activity
               it.addFlags(Intent.FLAG_ACTIVITY_CLEAR_TOP);
@@ -67,4 +68,3 @@ tags:
 	   }
       </pre>
       </ol>
-
