--- a/source/_posts/2015-04-24-移动组周技术分享.md
+++ b/source/_posts/2015-04-24-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-04-24 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 ## 2015.04.24
@@ -10,9 +11,9 @@ tags:
 	- 最好有明确的需求说明文档
 	- 能够及时和设计、PM沟通反馈，有效跟进需求变更
 	- 工程师前期做好想法融合，先把需求想法抛出，不要等到研发过程中
-- 设计明确 
+- 设计明确
 	- 在研发过程中，功能和设计达到高度统一，不要做功能的时候忽略UI设计(前期UI设计模块尽量不要留下太多后期需要填补的坑)
-- 代码质量 
+- 代码质量
 	- 注释:在代码中一些自己写的方法尽量注释(功能、参数，使用)
 	- code review(代码review很重要)
 	- 复用
