--- a/source/_posts/2015-05-08-移动组周技术分享.md
+++ b/source/_posts/2015-05-08-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-05-08 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 ## 2015.05.08
 
@@ -13,7 +14,7 @@ tags:
 - 为什么采用Jenkins+github的持续集成环境
 	- Jenins是现在非常流行的持续集成CI服务器，Jenkins易于安装，不需要数据库的支持，直接通过Web界面进行配置，而且集成了Email的通知机制，具有丰富的插件。
 	- 对于版本控制，SVN & Git，Jenkins都有提供插件支持
-	
+
 - [Jenkins安装](http://jenkins-ci.org)
      - 安装成功，键入http://localhost:8080进入
 - 丰富插件安装
@@ -54,7 +55,7 @@ tags:
 	- [快捷键](http://sublime-text-unofficial-documentation.readthedocs.org/en/latest/reference/keyboard_shortcuts_osx.html)
 	- [查看默认支持语言配置文件](http://stackoverflow.com/questions/21190392/how-to-change-default-code-snippets-in-sublime-text-3)
 	- 插件
-		- emmet: [cheat-sheet](http://docs.emmet.io/cheat-sheet/) 
+		- emmet: [cheat-sheet](http://docs.emmet.io/cheat-sheet/)
 		- BracketHighlighter: 块高亮
 		- HTML5: snippet
 		- SublimeLinter: 校验
@@ -65,4 +66,3 @@ tags:
 	- `powder link web-name` 一条命令搞定
 	- 适合静态网页开发，（或 ruby 动态网页开发）
 - Demo
-
