--- a/source/_posts/2015-05-15-移动组周技术分享.md
+++ b/source/_posts/2015-05-15-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-05-15 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 ## 2015.05.15
@@ -14,10 +15,10 @@ tags:
     - IOS
 		- iOS 4以及之前版本, 采用Softbank编码.
 		- iOS 5以及之后的版本，或者OSX Lion之后的系统, 则改为使用了Unicode6.0编码
-		 
+
     - Android
 	    - 在android4.4开始支持emoji表情，Unicode编码,如sougou，谷歌等输入法都支持emoji表情。
- 
+
 
 - emoji展示过程
 
@@ -29,7 +30,7 @@ tags:
 
 	- android或wp其他手机： 如果没有emoji表情库，将无法输入。针对输入问题,将统一采用unicode6.0编码存储，UBB代码.
 
-    - 数据库存储：存数据以UTF-8编码用3个字节去存储的，而emoji表情要用4个字节的utf8，也就是utf8mb4格式. 
+    - 数据库存储：存数据以UTF-8编码用3个字节去存储的，而emoji表情要用4个字节的utf8，也就是utf8mb4格式.
         - 数据库编码转为utf8mb4,
  		- emoji表情转为支持的utf-8，如转为UBB代码([emoji]2600[/emoji])，HTML转义字符(&#x2600)
 - emoji表情不支持处理
@@ -45,11 +46,10 @@ tags:
 	- 添加`"Key"="value"`; 然后使用时用`NSLocalizedString(@"key", @"")`; 读取内容.`Localization.strings English文`件添加` "key" = "english value"`;`Localization.strings English`文件添加 `"key" = "中文内容"`;
 	- 保持需要国际化的语言对应同一key值：比如`English`的添加`CFBundleDisplayName="China"`;`Chinese`文件添加`CFBundleDisplayName="中国"`.
 	- 使用：`NSString * str = NSLocalizedString(@"CFBundleDisplayName",nil]`;
-	
-	
+
+
 - [CodeRunner](https://itunes.apple.com/us/app/coderunner/id433335799?mt=12)
-	- CodeRunner是Mac下一款可编辑多种主流编程语言，并且一键运行检测结果；带有缩进、自动补完、语法高亮和智能括号匹配等特性的APP。 
-	- Description 
+	- CodeRunner是Mac下一款可编辑多种主流编程语言，并且一键运行检测结果；带有缩进、自动补完、语法高亮和智能括号匹配等特性的APP。
+	- Description
 		- [官方描述](https://coderunnerapp.com):CodeRunner is the easiest way to write code on your Mac. You can run code in almost any language instantly, and you'll be surprised by the powerful set of features in such a lightweight and easy-to-use editor.
 		- [iTunesStore](https://itunes.apple.com/us/app/coderunner/id433335799?mt=12):Edit and run code in any programming language with just a single click. With CodeRunner, It has never been easier to write and test code, run scripts, work with algorithms, or simply experiment with a new coding or scripting language.
-
