--- a/source/_posts/2015-05-22-移动组周技术分享.md
+++ b/source/_posts/2015-05-22-移动组周技术分享.md
@@ -1,6 +1,7 @@
 title: 《无主题》
 date: 2015-05-22 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 ## 2015.05.22
@@ -101,4 +102,3 @@ UIDynamicAnimator | 引擎载体
 [UIAttachmentBehavior](https://github.com/ZhipingYang/UIKitDynamics/blob/master/DynamicsDemo/AttachmentViewController.m) | 链接行为（弹簧效果）
 [UISnapBehavior](https://github.com/ZhipingYang/UIKitDynamics/blob/master/DynamicsDemo/SnapViewController.m) | 吸附行为
 [UIPushBehavior](https://github.com/ZhipingYang/UIKitDynamics/blob/master/DynamicsDemo/PushViewController.m) | 受力行为
-
