--- a/source/_posts/2015-06-05-移动组周技术分享-博客.md
+++ b/source/_posts/2015-06-05-移动组周技术分享-博客.md
@@ -3,6 +3,7 @@ date: 2015-06-05 23:04:29
 tags:
 - 博客
 - 网站
+categories: 移动组周技术分享
 
 ---
 
@@ -35,7 +36,7 @@ tags:
 	- [开源代码](https://github.com/TryGhost/Ghost)
 	- [开源主题样式](https://github.com/search?utf8=%E2%9C%93&q=Ghost+theme&type=Repositories&ref=searchresults)
 	- [主题 - 官方](http://marketplace.ghost.org/)
-	
+
 
 - [Octopress](http://octopress.org) 免费，比较繁琐
 
@@ -60,7 +61,7 @@ tags:
 	- [NSHipster中国](http://nshipster.cn/)
 	- [玉令天下 ](http://yulingtianxia.com/)
 	- [不会开机的男孩 ](http://studentdeng.github.io/blog/archives/)
-	
+
 - 国外
 	- [objc](http://www.objc.io/)
 	- [MainiacDev](https://maniacdev.com/)
@@ -74,16 +75,16 @@ tags:
        - 最新好玩的android效果
        - 1到2周更新一次
        - 提供源码
-       
+
    - [郭霖博客](http://blog.csdn.net/guolin_blog/)
        - 资深Android开发工程师、架构师
        - 畅销技术书籍《第一行代码——Android》
        - 博客主要针对android的最新技术分享透彻逻辑性强
-       
+
    - [android性能优化](http://hukai.me/android-training-course-in-chinese/index.html)
        - 学习Android应用开发的绝佳资料
        - Google Android团队在2012年的时候开设了Android Training板块
-       
+
    - [Android开发资源汇总](http://www.2cto.com/kf/201406/307331.html)
 
 ####博客工具与博客推荐 - 潘君
@@ -93,9 +94,9 @@ tags:
 		- 全平台
 		- 可批量导入RSS订阅OPML文件([唐巧推荐博客OPML](https://raw.githubusercontent.com/tangqiaoboy/iOSBlogCN/master/blogcn.opml))
 		- 内置搜索功能，根据关键词搜索感兴趣的博客
-	
+
 - 博客推荐
-	
+
 	- [Limboy](http://limboy.me/)
 		- 技术之余不乏鸡汤
 		- 涉猎较广,不仅限iOS
@@ -103,7 +104,7 @@ tags:
 		- 优秀重点博文推荐-[读 Facebook App 头文件的一些收获](http://limboy.me/ios/2014/11/28/facebook-app-headers.html)
 			- 相关工具索引:[class-dump](http://stevenygard.com/projects/class-dump/)
 			- 相关文章教程:[iOS 使用Class-dump分析App内部实现](http://itony.me/200.html)
-	
+
 	- [阮一峰的网络日志](http://www.ruanyifeng.com/blog/)
 		- 内容都较为浅显易懂,比较适合开拓眼界
 		- 内容都较为与时俱进,都是当前较为流行的一些主题
@@ -145,7 +146,7 @@ tags:
 
 - Scriptogr.am
 	- dropbox 同步
-	- 自定义主题 
+	- 自定义主题
 - FarBox
 	- dropbox 同步
 	- 自定义主题
@@ -173,11 +174,10 @@ tags:
 	- [onevcat](http://onev.cat) 创建，文章源自[objc.io](http://www.objc.io)，由[objc中国项目组](https://github.com/objccn) 整理维护
 	- 为中国 `Objective-C` 社区带来最佳实践和先进技术.
 
-	
+
 - [唐巧的技术博客](http://www.devtang.com/blog/categories/ios/)(记录下自己学习的点滴)
-	- 唐巧：猿题库iOS开发工程师，给InfoQ的「iOS 开发周报」供稿，并且转载到个人博客上。 	
+	- 唐巧：猿题库iOS开发工程师，给InfoQ的「iOS 开发周报」供稿，并且转载到个人博客上。
 
 - [ITeye](http://www.iteye.com)
 	- [ITeye起源](http://baike.baidu.com/link?url=bKegOkXpVAHodrvY1dSVwb0m7w3lgHPS4sUfR6kFo27giN181V4BnRlpmHNR9fEbnuXa3BkINVZVMAWAPR94wK)：ITeye即创办于2003年9月的javaEye，缘起是创始人范凯自己在学习和研究java的开源框架却发现没有一个讨论的地方，于是自己就办一个。
 	- 一个优秀的Java学习交流分享平台。
-
