--- a/source/_posts/2015-06-12-移动组周技术分享-开源.md
+++ b/source/_posts/2015-06-12-移动组周技术分享-开源.md
@@ -1,6 +1,7 @@
 title: 开源
 date: 2015-06-12 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 #### 开源利弊浅谈 - 张超耀
@@ -41,7 +42,7 @@ tags:
 	- 软件私有，保护版权
 	- 1976 年 《致计算机爱好者的公开信》
 - 理查德.斯托曼
-	- Free Soft	
+	- Free Soft
 	- GNU，GPL，Emacs，GCC
 	- 推荐两本书：《大教堂与集市》《Just for Fun》
 	- [HHKB](https://www.v2ex.com/t/45480) ；）
@@ -75,13 +76,13 @@ tags:
 			- 大屏支持还有bug
 			- 不支持swift语法高亮
 
-	
+
 
 - 自用较多的开源软件
 	- [WWDC app for OS X](https://github.com/insidegui/WWDC)
 	- [eggscellent](https://github.com/monoclesociety/eggscellent)
 	- [calibre](https://github.com/kovidgoyal/calibre)
-	
+
 
 #### 参与开源软件的心得 - 王胜
   - 参与方式：
@@ -102,7 +103,7 @@ tags:
 
 Google开发的基于TCP的应用层协议，用以最小化网络延迟，提升网络速度，优化用户的网络使用体验。SPDY并不是一种用于替代HTTP的协议，而是对HTTP协议的增强。
 > 新协议的功能:
-> 
+>
 > * 数据流的多路复用
 > * 请求优先级
 > * HTTP报头压缩。
@@ -179,7 +180,7 @@ star趋势
 
 #### 开源协议 - 吴明
   - 无规矩不成方圆，开源协议
- 
+
  	- BSD开源协议：满足三个条件
  		- 如果再发布的产品中包含源代码，则在源代码中必须带有原来代码中的BSD协议
  		- 如果再发布的只是二进制类库/软件，则需要在类库/软件的文档和版权声明中包含原来代码中的BSD协议
@@ -189,7 +190,7 @@ star趋势
 	   - 如果你修改了代码，需要再被修改的文件中说明。
 	   - 在延伸的代码中（修改和有源代码衍生的代码中）需要带有原来代码中的协议，商标，专利声明和其他原来作者规定需要包含的说明
 	   - 如果再发布的产品中包含一个Notice文件，则在Notice文件中需要带有Apache Licence。你可以在Notice中增加自己的许可，但不可以表现为对Apache Licence构成更改
-	 
+
 	- GPL：(Linux)(希望代码使用者同样能把他们的贡献分享出来，那就选择GPL)
 		- GPL协议和BSD, Apache Licence等鼓励代码重用的许可很不一样
 		- 代码的开源/免费使用和引用/修改/衍生代码的开源/免费使用，但不允许修改后和衍生的代码做为闭源的商业软件发布和销售
@@ -198,15 +199,12 @@ star趋势
 	- MIT：(简单、宽松，"为所欲为",选择这个协议)
 		- 类似BSD协议
 	- Mozilla
-	
+
 	- LGPL
 	  - LGPL是GPL的一个为主要为类库使用设计的开源协议。和GPL要求任何使用/修改/衍生之GPL类库的的软件必须采用GPL协议不同。LGPL允许商业软件通过类库引用(link)方式使用LGPL类库而不需要开源商业软件的代码。这使得采用LGPL协议的开源代码可以被商业软件作为类库引用并发布和销售。
-		
+
 	- 说了这么多最后一个[开源协议的选择](http://www.ruanyifeng.com/blog/2011/05/how_to_choose_free_software_licenses.html)
 	- 其他
 		- [github开源协议选择](http://choosealicense.com/)
 		- [参考1](http://www.awflasher.com/blog/archives/939)
 		- [参考2](http://www.ruanyifeng.com/blog/2011/05/how_to_choose_free_software_licenses.html)
-	
-
-
