--- a/source/_posts/2015-06-26-移动组周技术分享-线程并发和同步.md
+++ b/source/_posts/2015-06-26-移动组周技术分享-线程并发和同步.md
@@ -3,6 +3,7 @@ date: 2015-06-26 23:04:29
 tags:
 - 线程
 - 同步异步
+categories: 移动组周技术分享
 
 ---
 
@@ -27,7 +28,7 @@ tags:
 2. 上下文切换会导致处理器的一些缓存缺失
 
 > 线程的以上特性，促使了现代编程的并发和同步问题：
-> 
+>
 > * 安全性问题。安全性的含义是“永远不会发生糟糕的事情”
 > * 活跃性问题。活跃性关注的目标为“某件正确的事情最终会发生”
 > * 性能问题。性能关注的点事“正确的事情尽快发生”
@@ -54,7 +55,7 @@ tags:
 > * [深入理解计算机系统](http://book.douban.com/subject/5333562/)
 > * [Java并发编程实战](http://book.douban.com/subject/10484692/)
 
-### JAVA多线程中的单例——贾学涛 
+### JAVA多线程中的单例——贾学涛
 
 #### 常见单利模写法
 
@@ -62,15 +63,15 @@ tags:
 	public class Singleton {  
 
 		private static Singleton mInstance；
-	
+
 		private Singleton(){
 		}
-	
+
 		public static Singleton getInstance(){
 			if (mInstance == null) {
 				mInstance = new Singleton();
 			}
-			return mInstance;		
+			return mInstance;
 		}
 	}
 
@@ -82,15 +83,15 @@ tags:
 	public class Singleton {  
 
 		private static Singleton mInstance；
-	
+
 		private Singleton(){
 		}
-	
+
 		public static synchronized Singleton getInstance(){
 			if (mInstance == null) {
 				mInstance = new Singleton();
 			}
-			return mInstance;		
+			return mInstance;
 		}
 	}
 
@@ -101,10 +102,10 @@ tags:
 	public class Singleton {  
 
 		private static Singleton mInstance；
-	
+
 		private Singleton(){
 		}
-	
+
 		public static Singleton getInstance(){
 			if (mInstance == null) {          //Single Checked
 				synchronized(Singleton.class) {
@@ -113,7 +114,7 @@ tags:
 					}
 				}
 			}
-			return mInstance;		
+			return mInstance;
 		}
 	}
 
@@ -130,10 +131,10 @@ tags:
 	public class Singleton {  
 
 		private volatile static Singleton mInstance；    // 增加volatile关键字
-	
+
 		private Singleton(){
 		}
-	
+
 		public static Singleton getInstance(){
 			if (mInstance == null) {          //Single Checked
 				synchronized(Singleton.class) {
@@ -142,7 +143,7 @@ tags:
 					}
 				}
 			}
-			return mInstance;		
+			return mInstance;
 		}
 	}
 
@@ -156,12 +157,12 @@ tags:
 	public class Singleton {  
 
 		private static Singleton mInstance ＝ new Singleton()；
-	
+
 		private Singleton(){
 		}
-	
+
 		public static Singleton getInstance(){
-			return mInstance;		
+			return mInstance;
 		}
 	}
 
@@ -170,16 +171,16 @@ tags:
 	public class Singleton {
 
 		private static Singleton mInstance；
-	
+
 		static {
 			mInstance = new Singleton();
 		}
-	
+
 		private Singleton(){
 		}
-	
+
 		public static Singleton getInstance(){
-			return mInstance;		
+			return mInstance;
 		}
 	}
 
@@ -188,14 +189,14 @@ tags:
 #### 通过静态内部类来创建单例
 
 	public class Singleton {
-	
+
 		private Singleton(){
 		}
-	
+
 		public static Singleton getInstance(){
 			return InnerClass.mInstance;
 		}
-		
+
 		private staitc class InnerClass{
 			public static Singleton mInstance = new Singleton();
 		}
@@ -247,11 +248,11 @@ fish died			| .
 ```
 if (noNote) {
 	leave note
-	
+
 	if (noFeed) {
 		feed fish
 	}
-	
+
 	remove note
 }
 ```
@@ -383,7 +384,7 @@ unlock()
 
 **全部内容来自[《计算机的心智·操作系统之哲学原理》——邹恒明](http://book.douban.com/subject/3670621/) 第七章**
 
-### iOS并发相关的概念介绍——潘君 
+### iOS并发相关的概念介绍——潘君
 @(归纳中)[iOS]
 
 #### 基础概念
@@ -398,14 +399,14 @@ unlock()
 
 > property 修饰符
 
-加了atomic后生成的setter,类似如下代码:    
+加了atomic后生成的setter,类似如下代码:
 
 ```
-- (void)setProp:(NSString *)newValue {   
-    [_prop lock];   
-    _prop = newValue;   
-    [_prop unlock];   
-}   
+- (void)setProp:(NSString *)newValue {
+    [_prop lock];
+    _prop = newValue;
+    [_prop unlock];
+}
 ```
 
 
@@ -466,26 +467,26 @@ dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_DEFAULT, 0), ^{
 
 iOS有三种多线程编程的技术，分别是：
 
-- #### NSThread 
+- #### NSThread
 - #### Cocoa NSOperation
 - #### GCD ***（全称：Grand Central Dispatch）***
- 
+
 >  *这三种编程方式从上到下，抽象度层次是从低到高的，抽象度越高的使用越简单，也是Apple最推荐使用的*
 
- 
+
 #### 三种方式的介绍：
 ##### NSThread - [文档](https://developer.apple.com/library/prerelease/ios/documentation/Cocoa/Reference/Foundation/Classes/NSThread_Class/)
-> 优点：NSThread 比其他两个轻量级 
+> 优点：NSThread 比其他两个轻量级
 > 缺点：需要自己管理线程的生命周期，线程同步。线程同步对数据的加锁会有一定的系统开销
- 
+
 ##### NSOperation - [文档](https://developer.apple.com/library/mac/documentation/Cocoa/Reference/NSOperation_class/)
 > 优点：不需要关心线程管理，数据同步的事情，可以把精力放在自己需要执行的操作上。
 >创建NSOperation子类的对象，把对象添加到NSOperationQueue队列里执行。
- 
+
 ##### GCD - [文档](https://developer.apple.com/library/prerelease/ios/documentation/Performance/Reference/GCD_libdispatch_Ref/index.html)
 > Grand Central Dispatch (GCD)是Apple开发的一个多核编程的解决方法。在iOS4.0开始之后才能使用。GCD是一个替代诸如NSThread, NSOperationQueue, NSInvocationOperation等技术的很高效和强大的技术。
 
- 
+
 >GCD的底层依然是用线程实现，不过这样可以让程序员不用关注实现的细节。
 
 
@@ -499,8 +500,8 @@ Creation time | Approximately 90 microseconds | This value reflects the time bet
 
 #### 替代线程的一些技术
 
-Item | Approximate cost 
------ | ----- 
+Item | Approximate cost
+----- | -----
 Operation objects | Introduced in OS X v10.5, an operation object is a wrapper for a task that would normally be executed on a secondary thread. This wrapper hides the thread management aspects of performing the task, leaving you free to focus on the task itself. You typically use these objects in conjunction with an operation queue object, which actually manages the execution of the operation objects on one or more threads.For more information on how to use operation objects, see [Concurrency Programming Guide](https://developer.apple.com/library/mac/documentation/General/Conceptual/ConcurrencyProgrammingGuide/Introduction/Introduction.html#//apple_ref/doc/uid/TP40008091).
 Grand Central Dispatch (GCD) | Introduced in Mac OS x v10.6, Grand Central Dispatch is another alternative to threads that lets you focus on the tasks you need to perform rather than on thread management. With GCD, you define the task you want to perform and add it to a work queue, which handles the scheduling of your task on an appropriate thread. Work queues take into account the number of available cores and the current load to execute your tasks more efficiently than you could do yourself using threads.For information on how to use GCD and work queues, see [Concurrency Programming Guide](https://developer.apple.com/library/mac/documentation/General/Conceptual/ConcurrencyProgrammingGuide/Introduction/Introduction.html#//apple_ref/doc/uid/TP40008091)
 Idle-time notifications | For tasks that are relatively short and very low priority, idle time notifications let you perform the task at a time when your application is not as busy. Cocoa provides support for idle-time notifications using the NSNotificationQueue object. To request an idle-time notification, post a notification to the default [NSNotificationQueue](https://developer.apple.com/library/mac/documentation/Cocoa/Reference/Foundation/Classes/NSNotificationQueue_Class/index.html#//apple_ref/occ/cl/NSNotificationQueue) object using the [NSPostWhenIdle](https://developer.apple.com/library/mac/documentation/Cocoa/Reference/Foundation/Classes/NSNotificationQueue_Class/index.html#//apple_ref/c/econst/NSPostWhenIdle) option. The queue delays the delivery of your notification object until the run loop becomes idle. For more information, see [Notification Programming Topics](https://developer.apple.com/library/mac/documentation/Cocoa/Conceptual/Notifications/Introduction/introNotifications.html#//apple_ref/doc/uid/10000043i).
@@ -511,7 +512,7 @@ Separate processes | Although more heavyweight than threads, creating a separate
 #### 线程安全 - [文档](https://developer.apple.com/library/mac/documentation/Cocoa/Conceptual/Multithreading/ThreadSafetySummary/ThreadSafetySummary.html#//apple_ref/doc/uid/10000057i-CH12-SW1)
 
 ##### 原则
-- Immutable objects are generally thread-safe. Once you create them, you can safely pass these objects to and from threads. On the other hand, mutable objects are generally not thread-safe. To use mutable objects in a threaded application, the application must synchronize appropriately. 
+- Immutable objects are generally thread-safe. Once you create them, you can safely pass these objects to and from threads. On the other hand, mutable objects are generally not thread-safe. To use mutable objects in a threaded application, the application must synchronize appropriately.
 - Many objects deemed “thread-unsafe” are only unsafe to use from multiple threads. Many of these objects can be used from any thread as long as it is only one thread at a time. Objects that are specifically restricted to the main thread of an application are called out as such
 - The main thread of the application is responsible for handling events. Although the Application Kit continues to work if other threads are involved in the event path, operations can occur out of sequence
 - If you want to use a thread to draw to a view, bracket all drawing code between the ***lockFocusIfCanDraw*** and ***unlockFocus*** methods of NSView
@@ -560,7 +561,7 @@ NSUserDefaults
 NSValue
 
 ##### Thread-Unsafe Classes
-The following classes and functions are generally not thread-safe. In most cases, you can use these classes from any thread as long as you use them from only one thread at a time. 
+The following classes and functions are generally not thread-safe. In most cases, you can use these classes from any thread as long as you use them from only one thread at a time.
 
 >NSArchiver
 NSAutoreleasePool
@@ -607,19 +608,19 @@ The following class must be used only from the main thread of an application.
 #### 死锁的产生
 - [哲学家进餐问题](http://baike.baidu.com/link?url=OgOrpH_xTP7U0C0tM59aBhq83uaKe0Ck9MQEL1G41A3q-D1hVuynm3ra-U93RoQICKbmqhs7nTuCoN_elydnr_)
 
-**那么我们如何来消除“死锁”呢？首先，让我们来看看产生“死锁”的必要条件：** 
+**那么我们如何来消除“死锁”呢？首先，让我们来看看产生“死锁”的必要条件：**
 
-- 互斥：就是说多个线程不能同时使用同一资源 
+- 互斥：就是说多个线程不能同时使用同一资源
 
 - 请求和保持：就是某线程必须同时拥有多个资源才能完成任务，否则它将占用已经拥有的资源直到拥有他所需的所有资源为止
 
-- 不剥夺：就是说所有线程的优先级都相同，不能在别的线程没有释放资源的情况下，夺走其已占有的资源 
+- 不剥夺：就是说所有线程的优先级都相同，不能在别的线程没有释放资源的情况下，夺走其已占有的资源
 
 - 循环等待，就是没有资源满足的线程无限期地等待
 
 **有的朋友可能已经明白了，只要打破这这几个必要条件，就能打破“死锁”！**
 
-- 互斥：就是要让多个线程能共享资源 
+- 互斥：就是要让多个线程能共享资源
 
 - 请求和保持：只要当检测到自己所需的资源仍被别的线程占用，即释放自己已占有的资源（毫不利己，专门利人），或者在经过一段时间的等待后，还未得到所需资源，才释放，这都能打破请求和保持
 
@@ -641,7 +642,7 @@ class Target {
 	int id;// ID
 	String type;// 类型
 	int count;// 未读消息数
-	
+
 	public Target(int id, String type, int count) {
 		this.id = id;
 		this.type = type;
@@ -652,7 +653,7 @@ class Target {
 	public String toString() {
 		return "Target [id=" + id + ", type=" + type + ", count=" + count + "]";
 	}
-	
+
 }
 
 // 以下是模拟一组target集合，target包含group、room、user类型。
