--- a/source/_posts/2015-07-07-移动组周技术分享-知其所以然.md
+++ b/source/_posts/2015-07-07-移动组周技术分享-知其所以然.md
@@ -1,6 +1,7 @@
 title: 知其所以然
 date: 2015-07-07 23:04:29
 tags:
+categories: 移动组周技术分享
 ---
 
 ## 2015.07.07 - 知其所以然(10分钟解释一个和开发相关的原理)
@@ -117,7 +118,7 @@ Handler.obtain()最终还是调用Message.obtain()来获取的。
 ```
     // sometimes we store linked lists of these things
     /*package*/ Message next;
-    
+
     private static final Object sPoolSync = new Object();
     private static Message sPool;
     private static int sPoolSize = 0;
@@ -200,33 +201,33 @@ Handler.obtain()最终还是调用Message.obtain()来获取的。
 - 为什么免费未必就是最好的
 
 这些经济学原理背后又有哪些逻辑在支撑，让我去探讨一下这些好玩的经济学吧。
- 
+
 #### 价格越高越好卖——虚荣效应
- 
+
 - 富人们一般不喜欢大众模仿他们的消费行为，这种情况就叫做虚荣效应(snob effect)。虚荣效应具体是指购买商品的时候追求与众不同的个性的现象。
- 
+
 - 虚荣效应主要有以下两种表现。
- 
+
 	- 高档商品刚上市的时候迅速购买。这是因为，在这一瞬间并不是每个人都能享受到消费高档商品的荣誉。
- 
+
 	- 不论之前如何热情赞美的商品，一旦其市场占有率达到一般大众都可以消费的水平就不再继续购买。这是因为人人都能购买使用的商品既不会让人感到荣誉，也不会有高档的感觉。
- 
+
 #### 大手大脚的浪费能拯救经济——节约悖论
- 
+
 - 我们都知道，如果消费超过收入，就没有余钱可以储蓄，也就无法积累资金，最终只能过贫穷的生活。所以，为了成为富人我们会努力工作，有时候也会变成小气鬼，为了能储蓄更多钱而努力。
- 
+
 - 这个原理对于个人是适用的，但是对于国家整体经济是否也适用呢？如果所有国民都变成小气鬼，这个国家真的能够变得更加富强吗？答案是否定的，尤其是在经济不景气的时候。让我们看看其原因何在。
- 
+
 - 一旦经济进入不景气，基于对未来的担忧，人们会选择更多的储蓄进而减少消费。可是如果所有人都减少消费的话，企业的销售额就会降低，库存就会增加。随之而来的是企业只能降低生产减少雇用，而企业员工的收入就会减少。那么，对未来的担忧就会强化，人们会更加坚定地减少消费增加储蓄，于是整体经济就会陷入愈发不景气的恶性循环中。
- 
+
 #### 免费未必就好——免费经济学
- 
+
 - “世上没有免费的午餐”是1976年获得诺贝尔经济学奖的着名经济学家米尔顿弗里德曼(Milton Friedman)常说的一句话。
- 
+
 - 有的信息粗看之下似乎是免费的，实际上经过了解后发现并不是免费的意思；或者可以解释为免费后面隐藏着某种诱饵，还可以理解为不要期待不付出代价的免费东西。就像“免费的奶酪只存在于捕鼠器上”的俄罗斯谚语一样，对免费的东西保持警惕是亘古不变的道理。
- 
+
 - 看看我们周围，就能发现很多免费营销，地铁站前的免费报纸就是其中一种。曾经威胁到日报和体育报纸的免费报纸因为有很多读者，所以可以从广告收入上获得高收益。人气差的免费报纸会因为得不到足够的广告收入而被淘汰，这样的话，幸存下来的免费报纸就可以逐步占据更加有利的位置。越是资金实力雄厚的公司，在这种免费竞争中能够生存下来的概率就越大。因此，消费者也可能会面临因为垄断招致的损失。
- 
+
 - 免费经济市场的另一个弊端就是对资源的浪费。以免费报纸为例，因为免费派发给消费者，所以新闻纸会被大量浪费掉。大量生产大量消费的体制会导致能源的过度使用而招致地球变暖势头的加速。”
 
 
@@ -280,7 +281,7 @@ View Animation动画比较简单，一般都是单个因素的变化，如果牵
 实例：
 
 - ClipDrawable 定义xml文件
- 
+
 ~~~XML
 <?xml version="1.0" encoding="utf-8"?>
 <clip xmlns:android="http://schemas.android.com/apk/res/android"
