--- a/source/_posts/2015-07-10-移动组周技术分享-微信公众号开发.md
+++ b/source/_posts/2015-07-10-移动组周技术分享-微信公众号开发.md
@@ -1,6 +1,7 @@
 title: 微信公众号开发
 date: 2015-07-10 15:51
 tags:
+categories: 移动组周技术分享
 ---
 
 ## 对于微信公众号开发的疑问
@@ -63,7 +64,7 @@ tags:
 8. 微信调用第三方开发者服务端暴露的notify接口
 9. 第三方服务端在收到notify接口调用时，更新订单库里订单状态，同时调用push通道告诉APP支付成功
 10. APP收到push命令后进行页面跳转
- 
+
 
 
 ## 微信分享 - 吴明
@@ -89,33 +90,33 @@ tags:
             - 以下操作都是在[微信公众平台接口调试工具](http://mp.weixin.qq.com/debug)调试方法
       - 步骤1：调用“获取access token”接口,传入你申请的测试微信公众号的appid和secret获取access_token
       - 步骤2：调用“自定义菜单创建接口”，传入上面生成的access_token和“自定义菜单json数据"如下
-  
+
 ```
 {
     "button": [
         {
-            "type": "view", 
-            "name": "51offer", 
+            "type": "view",
+            "name": "51offer",
             "url": "http://www.51offer.com/"
-        }, 
+        },
         {
-            "name": "移动", 
+            "name": "移动",
             "sub_button": [
                 {
-                    "type": "view", 
-                    "name": "blog", 
+                    "type": "view",
+                    "name": "blog",
                     "url": "http://51offer.github.io/"
-                }, 
+                },
                 {
-                    "type": "view", 
-                    "name": "github", 
+                    "type": "view",
+                    "name": "github",
                     "url": "https://github.com/51offer/public-docs/wiki"
                 }
             ]
-        }, 
+        },
         {
-            "type": "click", 
-            "name": "我", 
+            "type": "click",
+            "name": "我",
             "key": "me"
         }
     ]
