添加better一路走来的历程

--- a/source/_posts/2015-07-16-移动组周技术分享-研发路上的那些事儿.md
+++ b/source/_posts/2015-07-16-移动组周技术分享-研发路上的那些事儿.md
@@ -3,6 +3,27 @@ date: 2015-07-16 16:56:00
 tags:
 ---
 
+## [[Better]](http://www.iambetter.cn/) 的一路走来 - 王胜
+
+### 第一个版本历时4个月的天天加班
+
+- 评估开发时间时，仅有原型；设计稿一出，开发人员瞬间觉得工作量要直线上升。
+- 按照一个有经验的工程师估出时间，然后上面说再调一个人，时间周期按照除以2来算。掉入《人月计划》中所说的坑。
+- 新组建的团队，缺少默契，需要磨合。【包括客户端之间，客户端与API之间，客户端与UI之间】
+- 临近上线，上面对体验要求无止境，导致细节调整没完没了
+
+### 一起努力，挺过4个月
+
+- 打过鸡血
+- 慢慢地团队之间有了默契
+- 制定上线体验阀值，不能无止境提出体验调整的需求
+
+### 后续版本的研发
+
+- 严格按照Scrum流程迭代开发版本，目前2周一迭代
+- Sprint确定需求后，不能强制加入新的需求
+- 特例的需求要插入Sprint，那么就顺延Sprint的周期
+
 ## 工作经历的一些片段 - 曾铭
 
 ### 文化
