--- a/source/_posts/2015-07-16-移动组周技术分享-研发路上的那些事儿.md
+++ b/source/_posts/2015-07-16-移动组周技术分享-研发路上的那些事儿.md
@@ -1,9 +1,9 @@
 title: 移动组周技术分享-研发路上的那些事儿
 date: 2015-07-16 16:56:00
-tags:
+tags:研发杂谈
 ---
 
-## [[Better]](http://www.iambetter.cn/) 的一路走来 - 王胜
+## [Better](http://www.iambetter.cn/) 的一路走来 - 王胜
 
 ### 第一个版本历时4个月的天天加班
 
