添加工作感悟－李仙鹏

--- a/source/_posts/2015-07-16-移动组周技术分享-研发路上的那些事儿.md
+++ b/source/_posts/2015-07-16-移动组周技术分享-研发路上的那些事儿.md
@@ -5,6 +5,18 @@ tags:
 
 ---
 
+## 工作感悟－李仙鹏
+
+- 团队结构：
+> 崇尚扁平化的互联网公司，员工之间没有非常明县的上下级关系。
+
+- 需求把控：
+> 需求不明确、中途变更、压榨开发都TMD是耍流氓
+> 
+> 1. 一个好的项目需求，应该在kick off前全面规划产品，产品和设计明确需求并且画押签字，中途不得变更。当临时提出需求变更时，技术应该敢于把画押字据拿出来并且提出拒绝——把变更需求留在下一版本迭代。
+> 
+> 2. 不应该为了迎合进度而倒推时间压榨开发，这样做出来的东西很可能会是漏洞百出的
+
 ## [Better](http://www.iambetter.cn/) 的一路走来 - 王胜
 
 ### 第一个版本历时4个月的天天加班
