--- a/source/_posts/移动周分享-第42期.md
+++ b/source/_posts/移动周分享-第42期.md
@@ -71,3 +71,79 @@ android:packageNames="com.tencent.mm"
 	-  当前聊天页面，不能接受通知
 	- AccessibilityEvent.TYPE_VIEW_SCROLLED监听屏幕view有新消息，则查看屏幕是否有'抢红包'view，有则点击‘抢红包’view,点击抢红包后则同上通过TYPE_WINDOW_STATE_CHANGED事件完成抢红包一系列动作
 - [代码地址](https://github.com/milin411/RedWallet.git)
+
+![ANDROID L - Material Design详解（动画篇） ](http://static.open-open.com/lib/uploadImg/20141122/20141122214256_785.gif)
+
+###使用效果如下：
+
+B1是不设任何背景的按钮
+
+B2设置了**?android:attr/selectableItemBackground**
+
+B3设置了**?android:attr/selectableItemBackgroundBorderless**
+
+###设置波纹颜色：
+
+**android:colorControlHighlight**：设置波纹颜色
+**android:colorAccent**：设置checkbox等控件的选中颜色
+**ripple xml 中设置color 属性**
+
+![ANDROID L - Material Design详解（动画篇） ](http://static.open-open.com/lib/uploadImg/20141122/20141122214257_848.gif)
+### 设置自定义RippleDrawable
+```
+<!-- An unbounded red ripple. --/> 
+<ripple android:color="#ffff0000" />
+```
+
+**也可以更改主题的波纹样式**
+```
+   <item name="android:selectableItemBackground">@drawable/selectable_item_stroke_bg</item>
+   <item name="android:selectableItemBackgroundBorderless">@drawable/selectable_item_bg</item>
+```
+**更改主题波纹颜色**
+**android:colorControlHighlight**：设置波纹颜色
+
+   更改样式波纹后，会对app系统内置具有波纹效果app造成影响，NavigationView,Toolbar 上Menu 等,特别是波纹的背景色
+   
+ > 因为波纹是在background属性上设置的，所以如果控件需要其他背景要素，可以在ripple的默认<item> 上设置
+ 
+### 5.0 兼容
+兼容方法有二：
+- V21 之前用selector
+- 第三方控件[MaterialRippleLayout](https://github.com/balysv/material-ripple)
+
+
+```
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_focused="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/common_action_button_h" />
+            <stroke  android:width="1dp" android:color="@color/colorAccent" />
+            <size android:height="@dimen/common_action_button_h" />
+            <solid android:color="#E5E5E5" />
+        </shape>
+    </item>
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/common_action_button_h" />
+            <stroke  android:width="1dp" android:color="@color/colorAccent" />
+            <size android:height="@dimen/common_action_button_h" />
+            <solid android:color="#E5E5E5" />
+        </shape>
+    </item>
+    <item android:drawable="@drawable/shape_logout_btn"></item>
+</selector>
+```
+drawable-v21
+```
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+  android:color="#E5E5E5">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/common_action_button_h" />
+            <solid android:color="@android:color/white" />
+        </shape>
+    </item>
+    <item android:drawable="@drawable/shape_logout_btn"></item>
+</ripple>
+```
