--- a/source/_posts/移动周分享-第42期.md
+++ b/source/_posts/移动周分享-第42期.md
@@ -72,6 +72,8 @@ android:packageNames="com.tencent.mm"
 	- AccessibilityEvent.TYPE_VIEW_SCROLLED监听屏幕view有新消息，则查看屏幕是否有'抢红包'view，有则点击‘抢红包’view,点击抢红包后则同上通过TYPE_WINDOW_STATE_CHANGED事件完成抢红包一系列动作
 - [代码地址](https://github.com/milin411/RedWallet.git)
 
+
+##Android Ripple - 王进
 ![ANDROID L - Material Design详解（动画篇） ](http://static.open-open.com/lib/uploadImg/20141122/20141122214256_785.gif)
 
 ###使用效果如下：
