--- a/source/_posts/移动周分享-第42期.md
+++ b/source/_posts/移动周分享-第42期.md
@@ -74,7 +74,7 @@ android:packageNames="com.tencent.mm"
 
 
 ##Android Ripple - 王进
-![ANDROID L - Material Design详解（动画篇） ](http://static.open-open.com/lib/uploadImg/20141122/20141122214256_785.gif)
+![ripple](http://static.open-open.com/lib/uploadImg/20141122/20141122214256_785.gif)
 
 ###使用效果如下：
 
