添加曾铭分享

--- a/source/_posts/移动周分享-第44期.md
+++ b/source/_posts/移动周分享-第44期.md
@@ -5,7 +5,7 @@ categories: 移动组周技术分享
 
 ---
 
-###从右到左布局（RTL Layout）- 王进
+##从右到左布局（RTL Layout）- 王进
 
 从Android 4.2开始，Android SDK支持一种从右到左（RTL，Right-to-Left）UI布局的方式，尽管这种布局方式经常被使用在诸如阿拉伯语、希伯来语等环境中，中国用户很少使用。不过在某些特殊用途中还是很方便的。
 
@@ -64,4 +64,47 @@ res/ drawable-hdpi // Default drawable-ldltr-hdpi // LTR drawable-ldrtl-hpid // 
 
 ![wKioJlKPZyjzCdeVAAAxAmZW9ww089.jpg (269×215)](http://s1.51cto.com/wyfs01/M02/32/CE/wKioJlKPZyjzCdeVAAAxAmZW9ww089.jpg)
 
+## 玩《Ori and the Blind Forest》- 曾铭
+先上百科：[奥里与迷失森林 - 维基百科，自由的百科全书](https://zh.wikipedia.org/wiki/%E5%A5%A7%E9%87%8C%E8%88%87%E8%BF%B7%E5%A4%B1%E6%A3%AE%E6%9E%97)
 
+![Ori And The Blind Forest 封面](http://upload-images.jianshu.io/upload_images/193400-8cc366cac68827a1.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+### 画面美
+
+画面美是最容易直观感受的第一印象，随便上个图就能感受到。用朋友的话来说『随便一张截图就是精美的壁纸』
+
+![Ori And The Blind Forest 画面美](http://upload-images.jianshu.io/upload_images/193400-e39edac8e3bc4f83.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+### 音乐燃
+
+音乐一直是游戏容易被忽略的一块，特别是 ori 这类『小制作』很容易重视画面而忽视音乐。不过其已经拿下了 2015 年金摇杆奖的最佳游戏音效奖，这方面自然了得。
+上手一会走过两个剧情你就会发现，音乐与音效与剧情衔接的十分自然。而洪水漫上来的那一段，我随着音乐不禁『燃』了起来，一段音乐已值回票价。
+对音乐的分析见这里：[如何评价《Ori and the Blind Forest 》的配乐水平？ - 舟行的回答 - 知乎](https://www.zhihu.com/question/29471127/answer/62215550)
+
+![Ori And The Blind Forest 音乐燃](http://upload-images.jianshu.io/upload_images/193400-3b1c3955db25b781.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+### 剧情沉浸
+
+奥瑞希望拯救『养母』，挣扎许久竟然发现悲剧都是自己酿成的，黑子的暴虐也有其苦衷。通关一刻，竟不知如何是好。
+于剧情，我没能理解更深。而从序幕到最后一刻，过场动画所陈诉的剧情都如游戏一般令我沉浸其中。这是令人沉浸的好剧情。
+想看大师的剧情分析看这里：[对奥里这款游戏的细节、故事以及人物的一些看法。奥日与黑暗森林吧](http://tieba.baidu.com/p/3646461185?share=9105&fr=share)
+
+![Ori And The Blind Forest 剧情沉浸](http://upload-images.jianshu.io/upload_images/193400-0ee5f5d36671ca5a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+### 地图赞
+
+Ori 属于横版过关游戏，地图设计比较复杂。特别是随着剧情的进展，主角逐步有二段跳，滑翔，贴墙等技能。最难的点就这个『逐步』。
+
+- 主角能力未到时，有些地图是去不了的，随着剧情变化，能到的『自然』能到
+- 一条路线跑过去，活得了某项能力，同样路线跑回来，新能力在这条路线上神奇的延伸的新玩法。滑翔那段尤其明显。
+- 地图很大，游戏没设传送门。剧情整体路线不重复，而部分的路线重复，确因角色能力的不同有了新的『跑路方式』，这点地图和场景结合得特好
+
+![Ori And The Blind Forest 全地图](http://upload-images.jianshu.io/upload_images/193400-babf2f9371c45ec7.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+### 总结 - 系统平衡 - 神作
+
+大学游戏大神魏巍有句话：『做游戏就是做平衡，你画面音乐剧情战斗任一方面做得完美都没有意义，只要有一点做得很不平衡，短板明显，就会毁掉这个游戏。』
+
+Ori 难能可贵的就是这一点，角色能力设计、操控、地图、画面、音乐。每一点设计都很『完美』，更完美的是这些方面衔接的是如此之好，互为衬映提升游戏的整体感受。在我心中，他是又一款神作。
+
+![像不像古堡迷踪与 Yorda 一起吃西瓜 ; ) 懂的自然懂~ ](http://upload-images.jianshu.io/upload_images/193400-52cd22630c1cd2c2.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
